--- a/src/org/groe/html/HtmlContainer.mxml
+++ b/src/org/groe/html/HtmlContainer.mxml
@@ -13,11 +13,15 @@
 
 	<mx:Script>
 		<![CDATA[
-		import flash.events.Event;
-		import mx.core.UIComponent;
-
-		import org.groe.html.*;
-		import org.groe.html.events.*;
+			import flash.events.Event;
+			
+			import mx.core.UIComponent;
+			
+			import org.groe.html.*;
+			import org.groe.html.components.VideoContainer;
+			import org.groe.html.events.*;
+			
+			import spark.components.VideoPlayer;
 
 		protected var _htmlString:String = null;
 		protected var _e:Element = null;
@@ -63,6 +67,37 @@
 		//debugging
 		override public function setStyle(styleProp:String, newValue:*):void {
 			super.setStyle(styleProp, newValue);
+		}
+			
+		public function kill():void
+		{
+			var children:Array = [];
+			getChildrenElements(rootHtmlContainer, children);
+			children.length;
+			
+			var videoContainers:Array = [];
+			for (var i:int=0; i<children.length; i++) 
+			{
+				if (children[i] is VideoContainer)
+				{
+					videoContainers.push(children[i]);
+					(children[i] as VideoContainer).kill();
+				}
+			}			
+			videoContainers.length;
+		}
+			
+		private function getChildrenElements(c:UIComponent, a:Array):void
+		{
+			a.push(c);
+			for (var i:int=0; i<c.numChildren; i++) 
+			{				
+				if (c.getChildAt(i) is UIComponent) 
+				{					
+					//a.push( c.getChildAt(i) as UIComponent );
+					getChildrenElements(c.getChildAt(i) as UIComponent, a);
+				}
+			}
 		}
 		
 	]]>
