Misc fixes and tweaks.

--- a/src/org/groe/html/components/ScaledImage.mxml
+++ b/src/org/groe/html/components/ScaledImage.mxml
@@ -72,7 +72,11 @@
 				}
 				
 				// fix image padding issue
-				if (content) content.y = -3;
+				try
+				{
+					if (content) content.y = -3;
+				}
+				catch (e:Error) {}
 				
 			}
 			
